# pyterabot

./: .gitignore  Pipfile  commands.json  dbtest.py  dbtest2.py  json_structure.json  main.py  pyproject.toml  utils.py
